--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="static/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">Filter Search</div>
                             <div class="panel-body">
-                                <form>
+                                <form id="form">
                                     <div class="form-group">
                                         <ul class="list-group" id="filters">
                                             <li class="filter list-group-item">
@@ -43,47 +44,52 @@
                                     </div>
                                     <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
                                 </form>
+                                <div class="form-group">
+                                    <ul class="list-group" id="option">
+                                        <li class="filter list-group-item">
+                                            <label for="option">Option Select</label>
+                                            <select class="form-control" id="option" type="text">
+                                              <option>Date</option>
+                                              <option>City</option>
+                                              <option>State</option>
+                                              <option>Country</option>
+                                              <option>Shape</option>
+                                              <option>Duration</option>
+                                              <option>Comments</option>
+                                            </select>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
                     </aside>
-                </div>
-                <div class="col-md-10">
-                    <div id="table-area" class="">
-                        <table id="ufo-table" class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th class="table-head">Date</th>
-                                    <th class="table-head">City</th>
-                                    <th class="table-head">State</th>
-                                    <th class="table-head">Country</th>
-                                    <th class="table-head">Shape</th>
-                                    <th class="table-head">Duration</th>
-                                    <th class="table-head">Comments</th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Example select</label>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
+                    </div>
+                    <div class="col-md-10">
+                        <div id="table-area" class="">
+                            <table id="ufo-table" class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th class="table-head">Date</th>
+                                        <th class="table-head">City</th>
+                                        <th class="table-head">State</th>
+                                        <th class="table-head">Country</th>
+                                        <th class="table-head">Shape</th>
+                                        <th class="table-head">Duration</th>
+                                        <th class="table-head">Comments</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
+            <footer class="footer">
+                <span class="bottom">UFO Sightings</span>
+            </footer>
         </div>
-        <footer class="footer">
-            <span class="bottom">UFO Sightings</span>
-        </footer>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+        <script src="static/js/data.js"></script>
+        <script src="static/js/app.js"></script>
 </body>
 
 </html>
